20110204 peripherals: add .deps and Makefile to the ignore property (Fred).
20110206 memory.[ch],peripherals/ide/{divide.c,zxatasp.c,zxcf.c}: use memory
         pool to allocate the DivIDE/ZXATASP/ZXCF memory.
20110207 peripherals/disk/disk.c: fix more transposed arguments in memset calls
         (thanks, Stuart Brady) (Fred).
20110207 peripherals/nic/enc28j60.c: add missing #include <string.h> (Fred).
20110207 machines/machines_periph.c: enable SpecDrum for TC2048 as is has
         a Spectrum compatible edge connector and ROM (Fred).
20110207 machines/machines_periph.c,periph.[ch],peripherals/{ay.c,disk/{beta.c,
         plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,
         joystick.c,kempmouse.[ch],melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,ula.c},periph.h: periph_t does not represent a peripheral,
         but just one port from a peripheral, so rename appropriately.
20110208 machines/spec16.c,memory.h,peripherals/disk/plusd.c: use memory pool to
         allocate the Spectrum 16K uninstalled memory and +D memory (Fred).
20110208 machines/machines_periph.c,periph.[ch],peripherals/{ay.c,disk/{beta.c,
         opus.c,plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},
         if1.c,if2.c,joystick.c,kempmouse.c,melodik.c,printer.c,scld.c,
         speccyboot.c,specdrum.c,ula.c}: wrap peripheral data up into a type
         and further renames to better match what types represent.
20110209 periph.[ch],peripherals/{disk/plusd.c,ide/{divide.c,zxatasp.c,zxcf.c}}:
         add new "peripheral activated" function and use it to allocate memory.
20110209 ui/{fb/fbjoystick.c,svga/svgajoystick.c}: fix compilation (fixes bug
         #3175619) (rkd77).
20110210 ui/{win32/{debugger.c,win32joystick.c,win32ui.c},xlib/xdisplay.c}:
         more compilation fixes (fixes bug #3176005) (Sergio Baldovi).
20110210 periph.ch: remove warning about accessing uninitialised value (Fred).